--- a/platformio.ini
+++ b/platformio.ini
@@ -1,14 +1,22 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
+[platformio]
+default_envs = nodemcu-32s
+[env]
+build_flags =
+    -D VERSION=1.0
+    -DCORE_DEBUG_LEVEL=5
+lib_deps =
+    ottowinter/ESPAsyncWebServer-esphome @ ^3.0.0
+    bblanchon/ArduinoJson @ ^6.19.4
+    knolleary/PubSubClient @ ^2.8
+    paulstoffregen/Time @ ^1.6.1
 [env:nodemcu-32s]
 platform = espressif32
-board = nodemcu-32s
 framework = arduino
+board = nodemcu-32s
+board_build.mcu = esp32
+board_build.f_cpu = 240000000L
+build_flags =
+    ${env.build_flags}
+lib_deps =
+    ${env.lib_deps}
+monitor_speed = 115200
